# FreelanceAPI

./: .gitignore  README.md  Table.txt  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yml  pylint.yml  python-package.yml
freelanceapi/: ContextManager.py  EamRecord.py  FreelanceAPI.py  FreelanceExportData.py  Gwy.py  KeyWord.py  Modify.py  MsrRecord.py  MsrRef.py  ParaData.py  ParaRef.py  PbvObjpath.py  UidAcc.py  _FreelanceFactories.py  __init__.py  _validator.py  csv_sections.py  row_identificator.py  sections.py  utils.py
freelanceapi/hwm/: HwmDict.py  HwmMetaData.py  HwmStr.py
freelanceapi/msr/: EamRecord.py  Gwy.py  KeyWord.py  MsrDict.py  MsrRecord.py  MsrRef.py  MsrStr.py  ParaData.py  UidAcc.py  __init__.py
freelanceapi/project/: ProjectDict.py  ProjectMetaData.py  ProjectStr.py
freelanceapi/sections/: gwy_dict.py  hd_dict.py  hw2_dict.py  msr_dict.py  para_dict.py  sections.py
freelanceapi/utils/: Classify.py  Create.py  Exceptions.py  Modify.py
tests/: ClassifyedExample.py  ExampleList.py  ExampleRows.py  test_Area.py  test_Cassify.py  test_Create.py  test_EamRecord.py  test_Gwy.py  test_Modify.py  test_MsrRecord.py  test_MsrRef.py  test_ParaData.py  test_ParaRef.py  test_PbNode.py  test_PbvObjpath.py  test_UidAcc.py  test_area_dict.py  test_beginiodescription.py  test_eam_dict.py  test_freelanceapi.py  test_gwy_dict.py  test_hd_dict.py  test_hw2_dict.py  test_hw2bob.py  test_msr_dict.py  test_node_dict.py  test_para_dict.py  test_pbaum_dict.py  test_resourcen_dict.py
