[tool.poetry]
name = "FreeCom"
version = "0.1.3"
description = "FreeCom is a module for reading & evaluating export files from the Freelance control system."

license = "GNU"

authors = ["Peter Schwarz <p.schwarz1994@outlook.de>"]

readme = 'README.rst' 

repository = "https://github.com/DarkJumper/FreeCom"
homepage = "https://github.com/DarkJumper/FreeCom"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
